--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-awesome-button": "^7.0.5",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "rsuite": "^5.37.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
