--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-awesome-button": "^7.0.5",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "rsuite": "^5.37.3",
